buttons are done

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 
-.button_colors button{
+.button_color button{
     background-color: gold; 
     color: black;         
     padding: 20px 20px;        
