updated buttons and added a references.html and .css

--- a/teambio.css
+++ b/teambio.css
@@ -27,3 +27,13 @@
 .bio-card-spacer {
     width: 10%;
 }
+
+.button_color button{
+    background-color: gold; 
+    color: black;         
+    padding: 20px 20px;        
+    font-size: 25px; 
+    font-weight: bold;
+    margin: 7px 8px;
+    border: none;     
+}
