--- a/presentations.css
+++ b/presentations.css
@@ -4,6 +4,6 @@
     padding: 20px 20px;        
     font-size: 25px; 
     font-weight: bold;
-    margin: -0.6;
+    margin: 0px;
     border: none;     
 }
