--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 /** Text styling **/
 h1 {
-    color: black;
+    color: white;
     font-family: sans-serif;
     font-weight: bold;
     font-size: xx-large;
